[package]
name = "simple_redis"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
dashmap = "6.1.0"
enum_dispatch = "0.3.13"
lazy_static = "1.5.0"
thiserror = "2.0.12"
